; ModuleID = '/home/carl/AnghaBench/sqlcipher/src/extr_test_syscall.c_ts_write.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/src/extr_test_syscall.c_ts_write.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [6 x i8] c"write\00", align 1
@EINTR = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i8*, i64)* @ts_write to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ts_write(i32 %0, i8* %1, i64 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  store i32 %0, i32* %5, align 4
  store i8* %1, i8** %6, align 8
  store i64 %2, i64* %7, align 8
  %8 = call i64 @tsIsFailErrno(i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0))
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %21

10:                                               ; preds = %3
  %11 = call i64 @tsErrno(i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0))
  %12 = load i64, i64* @EINTR, align 8
  %13 = icmp eq i64 %11, %12
  br i1 %13, label %14, label %20

14:                                               ; preds = %10
  %15 = load i32, i32* %5, align 4
  %16 = load i8*, i8** %6, align 8
  %17 = load i64, i64* %7, align 8
  %18 = udiv i64 %17, 2
  %19 = call i32 @orig_write(i32 %15, i8* %16, i64 %18)
  br label %20

20:                                               ; preds = %14, %10
  store i32 -1, i32* %4, align 4
  br label %26

21:                                               ; preds = %3
  %22 = load i32, i32* %5, align 4
  %23 = load i8*, i8** %6, align 8
  %24 = load i64, i64* %7, align 8
  %25 = call i32 @orig_write(i32 %22, i8* %23, i64 %24)
  store i32 %25, i32* %4, align 4
  br label %26

26:                                               ; preds = %21, %20
  %27 = load i32, i32* %4, align 4
  ret i32 %27
}

declare dso_local i64 @tsIsFailErrno(i8*) #1

declare dso_local i64 @tsErrno(i8*) #1

declare dso_local i32 @orig_write(i32, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
